# tekai

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  tekai.toml  texpilot.toml
.github/workflows/: ci.yml
crates/pdftex-rust/: Cargo.toml  README.md  build.rs
crates/pdftex-rust/cpp/: xpdf_bridge.cc
crates/pdftex-rust/src/: kpathsea.rs  lib.rs  md5.rs  openclose.rs  pdftoepdf.rs  pngshim.rs  support.rs  synctex.rs  utils.rs  web2c.rs  xpdf.rs
crates/tekai-engine/: Cargo.toml  README.md  build.rs
crates/tekai-engine/src/: kpathsea.rs  lib.rs  md5.rs  pdftoepdf.rs  pngshim.rs  support.rs  synctex.rs  utils.rs  xpdf.rs
crates/tekai-pdftex/: ARCHITECTURE.md  Cargo.toml  README.md
crates/tekai-pdftex/src/: contract.rs  expand.rs  lib.rs  native.rs  roadmap.rs
crates/tekai-pdftex/src/engine/: mod.rs
crates/texpilot-pdftex/: ARCHITECTURE.md  Cargo.toml  README.md
crates/texpilot-pdftex/src/: contract.rs  expand.rs  lib.rs  native.rs  roadmap.rs  token.rs  trace.rs
crates/texpilot-pdftex/src/engine/: mod.rs
docs/: development.md  editors.md  usage.md
editors/nvim/: README.md
editors/nvim/lua/tekai/: config.lua  health.lua  init.lua  protocol.lua  root.lua
editors/nvim/plugin/: tekai.lua
editors/nvim/tests/: run.lua
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  preview.ts  protocol.ts  root.ts
editors/vscode/src/test/: protocol.test.ts
examples/: minimal.tex
examples/arXiv-2511.08544v3/: bibliography.bib  document_commands.tex  main.tex  math_commands.tex  sectionnav.sty  simpleicml.sty
examples/arXiv-2511.08544v3/content/: abstract.tex  appendix.tex  background.tex  body.tex  conclusion.tex  intro.tex
examples/arXiv-2605.26379v1/: appendix.tex  main.tex  references.bib
examples/arXiv-2605.26379v1/figures/: dgp.tex
examples/biblatex-biber/: main.tex  refs.bib
output/pdf/: pdftex-native-divergence-audit.md  pdftex-rust-parity-report.md  tekai-engine-parity-report.md
scripts/: benchmark_paper.py  native_pdftex_gate.py  native_pdftex_parity.py  pdftex_port.py  performance_gate.sh  verify_pdflatex_parity.sh  verify_release.sh
src/: cli.rs  compiler.rs  config.rs  lib.rs  lint.rs  main.rs  watch.rs
tests/: cli_build_config.rs  cli_check.rs  cli_clean.rs  cli_help.rs  cli_init.rs  cli_lint.rs  cli_synctex.rs  compiler_asymptote.rs  compiler_aux_tools.rs  compiler_bib2gls.rs  compiler_biber.rs  compiler_bibliography.rs  compiler_cache.rs  compiler_convergence.rs  compiler_dependencies.rs  compiler_eps.rs  compiler_fast.rs  compiler_glossary.rs  compiler_gnuplottex.rs  compiler_include_dirs.rs  compiler_index.rs  compiler_jobname.rs  compiler_max_runs.rs  compiler_metapost.rs  compiler_minted.rs  compiler_nomenclature.rs  compiler_pgf_external.rs  compiler_pythontex.rs  compiler_svg.rs  compiler_tekai_pdftex.rs  compiler_texpilot_pdftex.rs  lint.rs  native_pdftex_gate.rs  native_pdftex_parity.rs  pdflatex_parity.rs
