[package]
name = "texpilot"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/texpilot-pdftex", "crates/pdftex-rust"]
resolver = "3"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
texpilot-pdftex = { path = "crates/texpilot-pdftex" }
toml = "0.8"
walkdir = "2.5"
