[package]
name = "tekai"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
description = "Fast, fidelity-preserving LaTeX builds, live previews, caching, and linting"
default-run = "tekai"
license = "MIT"
repository = "https://github.com/NicoNekoru/tekai"
homepage = "https://github.com/NicoNekoru/tekai"
readme = "README.md"
keywords = ["latex", "tex", "pdftex", "build", "cli"]
categories = ["command-line-utilities", "development-tools::build-utils"]
publish = false

[workspace]
members = ["crates/tekai-pdftex", "crates/tekai-engine"]
resolver = "3"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tekai-engine = { path = "crates/tekai-engine", default-features = false }
tekai-pdftex = { path = "crates/tekai-pdftex" }
toml = "0.8"
walkdir = "2.5"
