[package]
name = "pdftex-rust"
version = "0.1.0"
edition = "2021"
description = "Generated Rust port of the pdfTeX web2c core for texpilot."
publish = false

[features]
default = ["c-entrypoint"]
c-entrypoint = []
rust-binary = []

[lib]
name = "pdftex_rust"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "pdftex-rust"
path = "src/bin/pdftex-rust.rs"
required-features = ["rust-binary"]

[dependencies]
libc = "0.2"
libz-rs-sys = { version = "0.6.5", features = ["export-symbols", "gz"] }

[build-dependencies]
cc = "1.2.65"
