[package]
name = "texpilot-pdftex"
version = "0.1.0"
edition = "2024"
description = "Experimental pdfTeX-compatible engine contract and rewrite plan for texpilot."
publish = false

[lib]
name = "texpilot_pdftex"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1.0"
lopdf = "0.35"
md-5 = "0.10"
png = "0.17"
